# RedStone

./: LICENSE  README.md
.github/workflows/: codeql.yml
DomainSpecific/: .gitignore  readme.md  requirements.txt  sample_run.sh  submit.py
DomainSpecific/configs/: cc_math_filter.CC-MAIN-2023-23.json  cc_openquestion_filter.CC-MAIN-2023-23.json  cc_warc_download.CC-MAIN-2023-23.json  cc_warc_filter.CC-MAIN-2023-23.json  cc_warc_to_wet.code.CC-MAIN-2023-23.json  cc_warc_to_wet.math.CC-MAIN-2023-23.json  network_template.json
DomainSpecific/core/: __init__.py  data.py  layer.py  network.py
DomainSpecific/core/layers/: __init__.py  global_var.py  template_layer.py  util.py
DomainSpecific/dependency/: gpt_api.py  install.py  requirements.txt
DomainSpecific/tools/: __init__.py  submit_batch_job.py  submit_local_job.py
DomainSpecific/wrapper/: __init__.py  interpreter.py  parser.py  runner.py
GeneralDomain/: README.md  pyproject.toml
GeneralDomain/redstone_cc/: __init__.py  __main__.py  process.py
GeneralDomain/redstone_cc/algos/: fasttext_classifier.py  trafilatura_process.py
GeneralDomain/redstone_cc/algos/deduplication/: minhash.py  sha1.py  utils.py
GeneralDomain/redstone_cc/algos/rule_based_filters/: utils.py
GeneralDomain/redstone_cc/algos/rule_based_filters/func/: document.py  line.py  repetition.py
GeneralDomain/redstone_cc/algos/rule_based_filters/model/: document.py  violations.py
GeneralDomain/redstone_cc/algos/rule_based_filters/ruleset/: gopher.py  refinedweb.py
GeneralDomain/spark-dedup-example/: minhash-dedup.py
(+60 files in other folders)
